# task-management

./: .env.example  .gitignore  .mcp.json  .mcp.json.example  CLAUDE.md  CLAUDE_LOG.md  DEPLOYMENT_READY.md  NOTION_DATABASE_SCHEMA_ANALYSIS.md  README.md  STRUCTURE_IMPROVEMENTS.md  UV_MIGRATION_SUMMARY.md  mcp-requirements.txt  notion_mcp_server.py  pyproject.toml  requirements-dev.txt  requirements.txt  reset_last_voice_files.py  temp_query.py  test_claude_env.py  test_claude_shell.sh  test_claude_token.py
.bmad-core/: core-config.yaml  install-manifest.yaml
.bmad-core/tasks/: create-next-story.md  shard-doc.md
.bmad-core/templates/: architecture-tmpl.yaml  brainstorming-output-tmpl.yaml  brownfield-architecture-tmpl.yaml  brownfield-prd-tmpl.yaml  (+8 more)
.sourcerer/: checks.yaml
config/: env.template
data/: processed_files.db  voice-daemon-health.json
docs/: CLAUDE_SUBPROCESS_AUTH_PROBLEM.md  DOCUMENTATION.md  DOCUMENTATION_UPDATE_SUMMARY.md  FEATURE_SPEC_DELTA_ANALYSIS.md  FEATURE_SPEC_DELTA_CLARIFICATION.md  NOTION_REMOVAL_DESIGN.md  README.md  SERVICE_ARCHITECTURE.md  USER_GUIDE.md  claude-authentication-solution.md  mcp-inspector-setup.md  uv-migration-guide.md  voice-processing-flow.md
scripts/: README.md  clean-duplicates-cli.sh  demo-mcp-inspector.sh  migrate-to-uv.sh  quick-dev-setup.sh  quick-summary.sh  setup-voice-cron.sh  simple-delete-duplicates.py  start-mcp-inspector.sh  test-mcp-server.py  voice-monitor-cron.sh  voice-status.sh  voice_logging.py  vtm-cron-wrapper.sh
tests/: __init__.py  conftest.py  test_analyzer.py  test_archive.py  test_cleanup.py  test_cli.py  test_config.py  test_database.py  test_duplicate_prevention.py  test_models.py  test_notifications.py  test_parameter_validation.py  test_performance.py
(+270 files in other folders)
