[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voice-task-manager"
version = "1.0.0"
description = "Automated voice recording to Notion task conversion"
authors = [{name = "Mike", email = "mike@example.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32.0",
    "openai>=1.93.0", 
    "python-dotenv>=1.1.0",
    "click>=8.1.0",
    "rich>=13.0.0"
]

[project.scripts]
vtm = "voice_task_manager.cli:main"
voice-task-manager = "voice_task_manager.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0", 
    "pytest-cov", 
    "black", 
    "ruff", 
    "mypy",
    "pytest-mock"
]
mcp = [
    "mcp[cli]>=1.12.0"
]
all = [
    "voice-task-manager[dev,mcp]"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v"
]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "ICN", "PIE", "T20", "Q"]
ignore = ["E501"]  # Line too long (handled by black)

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true